src/sections/ContactUsSection/ContactUsSection.css
.contact-us-section-container-desktop {
  display: grid;
  grid-template-columns: 1fr 500px;
  padding-top: var(--main-item-distance);
  padding-right: var(--main-item-distance);
  margin-bottom: var(--main-item-distance);
  border-left: 10px solid var(--main-app-color);
  border-bottom: none;
  border-top: none;
  color: white;
}

.contact-us-section-container-mobile {
  display: grid;
  grid-template-rows: fit-content(200px) 1fr;
  padding-top: 40px;
  padding-bottom: 30px;
  border-left: 10px solid #ff4970;
}

.contact-us-section-container-title-desktop {
  display: grid;
  position: relative;
  float: right;
  background-size: 400% 400%;
  background: url(/circuit.jpg);
  animation: gradient 140s ease infinite;
  font-size: 24px;
  font-weight: bolder;
  text-align: center;
}

.contact-us-section-container-title-mobile {
  color: white;
  font-size: 35px;
  opacity: 0.9;
  font-weight: bolder;
  text-align: center;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.contact-us-section-container-form-desktop {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 250px;
}

.contact-us-section-container-form-mobile {
  display: grid;
  padding-right: 10px;
  padding-top: var(--main-item-distance);
  grid-template-rows: 1fr 1fr 1fr 1fr 250px;
}

.contact-us-section-item {
  padding-top: 10px;
  padding-bottom: 10px;
}

.contact-us-section-item-label {
  display: grid;
  grid-template-columns: fit-content(120px) 1fr;
  grid-column-gap: 15px;
  width: 300px;
  font-weight: bolder;
  color: var(--main-sec-app-color);
}

.contact-us-section-item-label-error {
  display: grid;
  width: 15px;
  text-align: left;
  filter: invert(27%) sepia(85%) saturate(1985%) hue-rotate(327deg)
    brightness(86%) contrast(82%);
}

.contact-us-section-item-input {
  font-size: 20px;
  margin-top: 10px;
  height: 30px;
  width: 100%;
}

.contact-us-section-item-input-mobile {
  font-size: 20px;
  margin-top: 10px;
  height: 30px;
  width: 95%;
}

.contact-us-section-item-input-free-text {
  font-size: 20px;
  margin-top: 10px;
  height: 200px;
  width: 100%;
}

.contact-us-section-item-input-free-text-mobile {
  font-size: 20px;
  margin-top: 10px;
  height: 200px;
  width: 95%;
}

.contact-us-section-send-btn-container {
  width: 140px;
  float: left;
  padding-top: 25px;
  font-size: 18px;
}

.contact-us-section-send-btn {
  display: grid;
  text-align: center;
  align-items: center;
  font-weight: bolder;
  background: var(--main-app-color);
  height: 50px;
  cursor: pointer;
  min-width: 100px;
  background: var(--main-sec-app-color);
  color: var(--main-app-color);
}

.contact-us-section-send-btn:hover {
  transform: scale(1.05);
}

.contact-us-section-item-label-error-label {
  color: var(--main-app-color);
  font-size: smaller;
}

.contact-us-section-item-label-error-container {
  display: grid;
  grid-column-gap: 5px;
  grid-template-columns: fit-content(130px) 1fr;
  align-items: center;
}

.contact-us-section-container-form-wrapper-desktop {
  display: grid;
  grid-template-rows: 1fr 100px;
}

.contact-us-section-container-title-inner-message {
  position: absolute;
  left: var(--main-item-distance);
  bottom: var(--main-item-distance);
  color: white;
  background: var(--main-app-color);
  padding: 50px;
  border-radius: 50px;
  border-bottom-left-radius: 0;
}

.contact-us-section-container-title-inner-message:hover {
  transform: scale(1.05);
  box-shadow: 20px 20px 60px var(--main-deg-app-color),
    -20px -20px 60px var(--main-app-color);
}

.rts-page-loading {
  position: sticky;
  left: 50%;
  top: 50%;
  height: 100%;
  margin-left: calc(50% - 32px);
}

